# zewif

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: draft-nuttycom-zewif.md  zewif.cddl
src/: account.rs  account_viewing_key.rs  address.rs  address_book.rs  amount.rs  anchor.rs  bip_39_mnemonic.rs  blob.rs  blob_macro.rs  block_hash.rs  block_height.rs  chain_state.rs  container.rs  data.rs  data_macro.rs  derivation_info.rs  diversifier_index.rs  envelope_macros.rs  error.rs  extensions.rs  incremental_witness.rs  indexed.rs  key_scope.rs  key_source.rs  legacy_seed.rs  lib.rs  memo.rs  mnemonic_language.rs  mod_use_macro.rs  network.rs  non_hardened_child_index.rs  nullifier.rs  protocol_address.rs  received_output.rs  scan_range.rs  script.rs  secret_store.rs  seed_fingerprint.rs  seed_material.rs  sent_output.rs  (+15 more)
src/ironwood/: ironwood_sent_output.rs  ironwood_witness.rs  mod.rs
src/orchard/: orchard_sent_output.rs  orchard_witness.rs
src/sapling/: address.rs  mod.rs  sapling_extended_full_viewing_key.rs  sapling_extended_spending_key.rs  sapling_incoming_viewing_key.rs  sapling_sent_output.rs  sapling_witness.rs
src/transparent/: address.rs  mod.rs  transparent_pub_key.rs  transparent_sent_output.rs  transparent_spend_authority.rs  transparent_spending_key.rs
tests/: cddl_conformance.rs  golden.rs  schema_sync.rs
tests/fixtures/v1/: encrypted.zewif  full.zewif  minimal.zewif
