[package]
name = "zewif"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache 2.0"

[dependencies]
# Version bumps of minicbor are format-affecting changes, permitted only when
# the golden/conformance tests still pass. (minicbor 2.x's derive requires
# Rust >= 1.88 and is blocked by the 1.85.1 MSRV regardless.)
minicbor = { version = "1", features = ["derive", "std"] }

thiserror = "^2.0"
hex = "0.4.3"

age = { version = "0.11.3", optional = true, default-features = false }
rand = { version = "^0.9.2", optional = true }

[features]
default = []
encryption = ["dep:age"]
with-context = []
test-dependencies = ["dep:rand"]

[dev-dependencies]
rand = "^0.9.2"

# Used by tests/cddl_conformance.rs to validate emitted CBOR against
# docs/zewif.cddl. Chosen over the `cddl` crate, which cannot validate this
# schema: its 0.9.x parser rejects rule assignments broken across lines,
# 0.10.x falsely rejects nested wildcard map types (the `extensions`
# production) and map-typed record members with bstr keys (the txid-keyed
# output tables), 0.10.3+ requires rustc >= 1.88 (above this crate's MSRV
# of 1.85.1), and 0.10.6 stopped enforcing the .lt control operator.
cddl-cat = "0.7.1"
