[package]
name = "zewif"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache 2.0"

[dependencies]
dcbor = "^0.25.0"
bc-components = "^0.31.0"
bc-envelope = "^0.41.0"
bc-crypto = "^0.13.0"

thiserror = "^2.0"
chrono = "0.4.39"
hex = "0.4.3"

bc-rand = { version = "^0.5.0", optional = true }
rand = { version = "^0.9.2", optional = true }

[features]
default = []
with-context = []
test-dependencies = ["dep:rand", "dep:bc-rand"]

[dev-dependencies]
bc-rand = "^0.5.0"
rand = "^0.9.2"
