[package]
name = "zewif"
version = "1.0.0-rc.2"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Reference implementation of the Zcash Wallet Interchange Format"
homepage = "https://github.com/zcash/zewif"
repository = "https://github.com/zcash/zewif"

[dependencies]
# Version bumps of minicbor are format-affecting changes, permitted only when
# the golden/conformance tests still pass.
minicbor = { version = "2", features = ["derive", "std"] }

thiserror = "^2.0"
hex = "0.4.3"

age = { version = "0.11.3", optional = true, default-features = false }
rand = { version = "^0.9.2", optional = true }

[features]
default = []
encryption = ["dep:age"]
with-context = []
test-dependencies = ["dep:rand"]

[dev-dependencies]
rand = "^0.9.2"

# Used by tests/cddl_conformance.rs to validate emitted CBOR against
# docs/zewif.cddl. Chosen over the `cddl` crate, which cannot validate this
# schema: its 0.9.x parser rejects rule assignments broken across lines,
# 0.10.x falsely rejects nested wildcard map types (the `extensions`
# production) and map-typed record members with bstr keys (the txid-keyed
# output tables), and 0.10.6 stopped enforcing the .lt control operator.
cddl-cat = "0.7.1"
